--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="be-online" content="Kreatywne Studio Tworzenia Stron Internetowych" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main</title>
+    <title>Kreatywne Studio Tworzenia Stron Internetowych </title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -21,4 +21,54 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+<img   src="./images/logo.png"
+alt="logo firmy"
+width="330"/> 
+<ul> <li>O mnie</li>
+  <li>Oferta</li>
+  <li>Portfolio</li>
+ 
+  <li>Kontakt</li>
+  <li><button type="button">Umów rozmowę</button></li>
+</ul>
+    </header>
+    <main>
+<section>
+  <h1>Kreatywne Studio Tworzenia Stron Internetowych</h1>
+</section><section>
+  <h2>O mnie</h2>  
+</section>
+<section>
+  <h2>Oferta</h2>  
+</section>
+<section>
+  <h2>Portfolio</h2>  
+</section>
+<section>
+  <h2>Kontakt</h2>  
+</section>
+    </main>
+    <footer><img   src="./images/logo.png"
+      alt="logo firmy"
+      width="330"/> 
+      <ul>
+     <li><a href="https://www.facebook.com/agnieszka.choma.965/" target="_blank" rel="noreferrer noopener"> <svg>
+        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+      </svg></a></li>
+      <li><a href="https://www.instagram.com/droga.do.niezaleznosci/" target="_blank" rel="noreferrer noopener">
+        <svg>
+          <use href="./images/symbol-defs.svg#icon-instagram"></use>
+        </svg>
+      </a></li>
+      <li><a href="" target="_blank" rel="noreferrer noopener">
+        <svg>
+          <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+        </svg>
+      </a></li>
+   </ul> 
+  <div>
+    BE ONLINE 2023 Created by Agnieszka Choma - Kreatywne Studio Tworzenia Stron Internetowych
+  </div></footer>
+  </body></html>
