--- a/index.html
+++ b/index.html
@@ -22,53 +22,85 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-<img   src="./images/logo.png"
+    <header class="container">
+<img   src="./images/logo-transparent.png"
 alt="logo firmy"
-width="330"/> 
-<ul> <li>O mnie</li>
-  <li>Oferta</li>
-  <li>Portfolio</li>
- 
-  <li>Kontakt</li>
-  <li><button type="button">Umów rozmowę</button></li>
-</ul>
+width="330px"/> 
+<ul >
+  <li>
+<ul class="header-contect">
+  <li><a href="tel:+48509016515">+48 509 016 515</a></li>
+  <li><a href="mailto:aga.choma02@gmail.com">aga.choma02@gmail.com</a></li>
+</ul></li>
+<li><ul class="header-menu">
+  <li><a href="">O mnie</a></li>
+  <li><a href="">Oferta</a></li>
+  <li><a href="">Portfolio</a></li>
+  <li><a href="">Kontakt</a></li>
+</ul></li></ul>
     </header>
     <main>
-<section>
-  <h1>Kreatywne Studio Tworzenia Stron Internetowych</h1>
-</section><section>
+<section class="main-item">
+  <ul class="main container">
+    <li>
+ <img
+ src="./images/my-photo.png" 
+ alt="uśmiechnięta kobieta w upiętych blond włosach" 
+ width="350px"/>
+</li> <li class="main-text"><h1>Kreatywne Studio <br/>
+  Tworzenia Stron 
+  Internetowych</h1>
+<p>Wykorzystaj możliwości internetu i pozyskaj nowych klientów za pomocą nowoczesnej strony internetowej!
+   Projektuję, tworzę, wdrażam i promuję strony internetowe.</p>
+  
+<button class="main-button" type="button">Umów rozmowę</button>
+</li></ul></section>
+<section class="container">
   <h2>O mnie</h2>  
 </section>
-<section>
+<section class="container">
   <h2>Oferta</h2>  
+  <ul><li><h3>Indywidualny projekt graficzny</h3>
+    <p>możemy stworzyć wyjątkową stronę www
+      – dostosujemy zdjęcia i kolory do Twojej firmy i dopracujemy szczegóły, 
+      aby Twoja strona internetowa była wyjątkowa i skutecznie promowała Twój biznes w internecie!</p>
+  </li>
+<li><h3>Nowoczesny design i responsywność</h3><p>
+  Zbudujemy dla Ciebie profesjonalną stronę www dopasowaną do branży i Twoich potrzeb. 
+  Nasze realizacje są w pełni responsywne tzn. dostosowane do urządzeń mobilnych (smartfonów i tabletów) 
+  – już prawie 60% użytkowników korzysta ze smartfonów do przeglądania stron i szukania usług.</p></li>
+
+
+  </ul>
 </section>
-<section>
-  <h2>Portfolio</h2>  
+<section class="container">
+  <h2>Zrealizwane projekty</h2>  
 </section>
-<section>
+<section class="container">
   <h2>Kontakt</h2>  
 </section>
     </main>
-    <footer><img   src="./images/logo.png"
+    <section class="footer container">
+      <img   src="./images/logo-transparent.png"
       alt="logo firmy"
-      width="330"/> 
-      <ul>
-     <li><a href="https://www.facebook.com/agnieszka.choma.965/" target="_blank" rel="noreferrer noopener"> <svg>
+      width="200"/> 
+      <ul class="footer-sm">
+     <li><a href="https://www.facebook.com/agnieszka.choma.965/" target="_blank" rel="noreferrer noopener"> 
+      <svg class="footer-icon-sm">
         <use href="./images/symbol-defs.svg#icon-facebook"></use>
       </svg></a></li>
       <li><a href="https://www.instagram.com/droga.do.niezaleznosci/" target="_blank" rel="noreferrer noopener">
-        <svg>
+        <svg class="footer-icon-sm" >
           <use href="./images/symbol-defs.svg#icon-instagram"></use>
         </svg>
       </a></li>
       <li><a href="" target="_blank" rel="noreferrer noopener">
-        <svg>
+        <svg width="40px" height="40px" class="footer-icon-sm">
           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
         </svg>
       </a></li>
-   </ul> 
-  <div>
-    BE ONLINE 2023 Created by Agnieszka Choma - Kreatywne Studio Tworzenia Stron Internetowych
-  </div></footer>
+   </ul> </section>
+  <footer class="last-footer">
+    Copyright © 2023<span>  </span><a href="beonline.com.pl">beonline.com.pl</a> <span>  </span>  Created by Agnieszka Choma - Kreatywne Studio Tworzenia Stron Internetowych
+  </footer>
   </body></html>
