--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <header class="container">
-<img   src="./images/logo-transparent.png"
+<img   src="./images/new-logo.png"
 alt="logo firmy"
-width="330px"/> 
+width="100px" /> 
 <ul >
   <li>
 <ul class="header-contect">
